--- a/CQL/environment.yml
+++ b/CQL/environment.yml
@@ -9,25 +9,20 @@ dependencies:
     - numba
     - h5py
     - matplotlib
-    - scikit-learn
     - jupyter
-    - mpi4py
     - patchelf
-    - pytorch=1.9.0
-    - cudatoolkit=10.2
+    - pytorch=1.12.0
+    - cudatoolkit=11.3
     - pip:
         - Cython
-        - scikit-image
         - tqdm
-        - seaborn
-        - gym
+        - gym==0.21.0
         - mujoco_py==2.0.2.5
         - box2d
         - absl-py
-        - opencv-python
         - pygame
         - gtimer
         - joblib
-        - git+https://github.com/young-geng/d4rl@master#egg=d4rl
+        - git+https://github.com/rail-berkeley/d4rl@master#egg=d4rl
         - wandb
         - ml_collections
